--- a/7/index.html
+++ b/7/index.html
@@ -30,8 +30,10 @@
             <li class="navigation-item">
               <a class="navigation-link" href="#">
                 <span class="visually-hidden">Поиск</span>
-                <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="19" xmlns="http://www.w3.org/2000/svg">
-                  <path d="m18.159 17.05-3.711-3.7c1.003-1.3 1.705-3 1.705-4.9 0-4.4-3.61-8-8.023-8C3.718.45.107 4.15.107 8.55c0 4.4 3.61 8 8.023 8 1.805 0 3.51-.6 4.914-1.7l3.71 3.7 1.404-1.5ZM8.13 14.55c-3.31 0-6.017-2.7-6.017-6s2.708-6 6.017-6c3.31 0 6.017 2.7 6.017 6s-2.707 6-6.017 6Z" fill="#000"/>
+                <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="19"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="m18.159 17.05-3.711-3.7c1.003-1.3 1.705-3 1.705-4.9 0-4.4-3.61-8-8.023-8C3.718.45.107 4.15.107 8.55c0 4.4 3.61 8 8.023 8 1.805 0 3.51-.6 4.914-1.7l3.71 3.7 1.404-1.5ZM8.13 14.55c-3.31 0-6.017-2.7-6.017-6s2.708-6 6.017-6c3.31 0 6.017 2.7 6.017 6s-2.707 6-6.017 6Z"/>
                 </svg>
               </a>
             </li>
@@ -39,10 +41,12 @@
               <a class="navigation-link" href="#">
                 <span class="visually-hidden">Избранное</span>
                 <div class="navigation-link-favorite">
-                  <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="17" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M9.57663 17C9.27578 17 8.97493 16.9 8.77436 16.6C3.35903 10.5 2.05534 9.1 1.75449 8.7C1.0525 7.8 0.651367 6.6 0.651367 5.4C0.651367 2.4 3.05818 0 6.16698 0C7.47067 0 8.67407 0.5 9.67691 1.3C10.6797 0.5 11.9834 0 13.1868 0C16.1954 0 18.7025 2.4 18.7025 5.4C18.7025 6.7 18.201 7.9 17.3988 8.8L10.3789 16.7C10.1783 16.9 9.97776 17 9.57663 17ZM3.5596 7.5C3.86045 7.9 7.06953 11.5 9.67691 14.4L15.8945 7.4C16.3959 6.9 16.5965 6.2 16.5965 5.4C16.5965 3.6 15.0922 2.1 13.2871 2.1C12.2843 2.1 11.2815 2.6 10.5795 3.4C10.2786 3.7 9.97776 3.8 9.67691 3.8C9.37606 3.8 9.07521 3.6 8.87464 3.4C8.17265 2.6 7.16982 2.1 6.16698 2.1C4.36187 2.1 2.85761 3.6 2.85761 5.4C2.75733 6.3 3.15846 7 3.5596 7.5C3.45931 7.5 3.45931 7.5 3.5596 7.5Z" fill="black"/>
+                  <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="17"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M9.57663 17C9.27578 17 8.97493 16.9 8.77436 16.6C3.35903 10.5 2.05534 9.1 1.75449 8.7C1.0525 7.8 0.651367 6.6 0.651367 5.4C0.651367 2.4 3.05818 0 6.16698 0C7.47067 0 8.67407 0.5 9.67691 1.3C10.6797 0.5 11.9834 0 13.1868 0C16.1954 0 18.7025 2.4 18.7025 5.4C18.7025 6.7 18.201 7.9 17.3988 8.8L10.3789 16.7C10.1783 16.9 9.97776 17 9.57663 17ZM3.5596 7.5C3.86045 7.9 7.06953 11.5 9.67691 14.4L15.8945 7.4C16.3959 6.9 16.5965 6.2 16.5965 5.4C16.5965 3.6 15.0922 2.1 13.2871 2.1C12.2843 2.1 11.2815 2.6 10.5795 3.4C10.2786 3.7 9.97776 3.8 9.67691 3.8C9.37606 3.8 9.07521 3.6 8.87464 3.4C8.17265 2.6 7.16982 2.1 6.16698 2.1C4.36187 2.1 2.85761 3.6 2.85761 5.4C2.75733 6.3 3.15846 7 3.5596 7.5C3.45931 7.5 3.45931 7.5 3.5596 7.5Z"/>
                   </svg>
-                  <span class="favorite-numbe">13</span>
+                  <span class="favorite-numbe">12</span>
                 </div>
               </a>
             </li>
@@ -67,63 +71,75 @@
               <li class="advantages-item advantages-img">
                 <div class="container-advantages">
                   <h3 class="advantages-item-title">Настоящий<br>городок</h3>
-                  <b clsss="advantages-numb">— №1 —</b>
-                  <p class=”advantages-description”>Седона — не аттракцион для<br>туристов, там течёт своя жизнь</p>
+                  <div class="advantages-numb">— №1 —</div>
+                  <div class=”advantages-description”>Седона — не аттракцион для<br>туристов, там течёт своя жизнь</div>
                 </div>
                 <div class="advantages-image-city">
                   <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
                 </div>
               </li>
               <li class="advantages-item color-block">
-                <div class="advantages-item-image">
-                  <img class="image" src="images/home-icons.svg" width="75" height="72" alt="Дом">
+                <div class="container-advantages container-advantages-icon">
+                  <div class="advantages-item-image">
+                    <img class="image" src="images/home-icons.svg" width="75" height="72" alt="Дом">
+                  </div>
+                  <h3 class="advantages-item-title advantages-city">Жильё</h3>
+                  <div class="advantages-description description-city">Рекомендуем пожить в настоящем мотеле, всё как в
+                    кино!</div>
                 </div>
-                <div class="advantages-item-title advantages-city">Жильё</div>
-                <div class="advantages-description description-city">Рекомендуем пожить в настоящем мотеле, всё как в
-                  кино!</div>
               </li>
               <li class="advantages-item">
-                <div class="advantages-item-image">
-                  <img class="image" src="images/food-icons.svg" width="74" height="70" alt="Бургер">
+                <div class="container-advantages container-advantages-icon">
+                  <div class="advantages-item-image">
+                    <img class="image" src="images/food-icons.svg" width="74" height="70" alt="Бургер">
+                  </div>
+                  <h3 class="advantages-item-title advantages-city">Еда</h3>
+                  <div class="advantages-description description-city">Всегда заказывайте<br>топовый фирменный бургер,
+                    вы не
+                    разочаруетесь!</div>
                 </div>
-                <div class="advantages-item-title advantages-city">Еда</div>
-                <div class="advantages-description description-city">Всегда заказывайте топовый фирменный бургер, вы не
-                  разочаруетесь!</div>
               </li>
-              <li class="advantages-item color-bloc">
-                <div class="advantages-item-image">
-                  <img class="image" src="images/souvenirs-icons.svg" width="64" height="76" alt="Подарок">
+              <li class="advantages-item color-block">
+                <div class="container-advantages container-advantages-icon">
+                  <div class="advantages-item-image">
+                    <img class="image" src="images/souvenirs-icons.svg" width="64" height="76" alt="Подарок">
+                  </div>
+                  <h3 class="advantages-item-title advantages-city">Сувениры</h3>
+                  <div class="advantages-description description-city">Не только китайского,<br>но и настоящего местного
+                    производства!</div>
                 </div>
-                <div class="advantages-item-title advantages-city">Сувениры</div>
-                <div class="advantages-description description-city">Не только китайского, но и настоящего местного
-                  производства!</div>
               </li>
               <li class="advantages-item advantages-img advantages-row-reverse">
                 <div class="container-advantages">
                   <h3 class="advantages-item-title">Там есть<br>мост дьявола</h3>
-                  <b class="advantages-numb">— №2 —</b>
-                  <p class=”advantages-description”>Да, по нему можно пройти!<br>Если вы осмелитесь, разумеется</p>
+                  <div class="advantages-numb">— №2 —</div>
+                  <div class=”advantages-description”>Да, по нему можно пройти!<br>Если вы осмелитесь, разумеется</div>
                 </div>
                 <div class="advantages-image-city">
                   <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
                 </div>
               </li>
-              <li class="advantages-item color-bloc">
-                <div class="advantages-item-title advantages-content">Небольшая<br>площадь</div>
-                <div class="advantages-numb">— №3 —</div>
-                <div class="advantages-description description-square">Все достопримечательности<br>находятся очень
-                  близко</div>
-              </li>
-              <li class="advantages-item color-road">
-                <div class="advantages-item-title advantages-content">Красивая<br>дорога</div>
-                <div class="advantages-numb">— №4 —</div>
-                <div class="advantages-description description-square">Ехать в Седону из Лас-Вегаса<br>совсем не скучно!
+              <li class="advantages-item color-block">
+                <div class="container-advantages container-advantages-numb">
+                  <div class="advantages-item-title">Небольшая<br>площадь</div>
+                  <div class="advantages-numb">— №3 —</div>
+                  <div class="advantages-description">Все достопримечательности<br>находятся очень
+                    близко</div>
                 </div>
               </li>
-              <li class="advantages-item color-bloc">
-                <div class="advantages-item-title advantages-content">Мало<br>туристов</div>
-                <div class="advantages-numb">— №5 —</div>
-                <div class="advantages-description description-square">Большинство едет в Гранд<br>Каньон и толпится там
+              <li class="advantages-item color-road">
+                <div class="container-advantages container-advantages-numb">
+                  <div class="advantages-item-title">Красивая<br>дорога</div>
+                  <div class="advantages-numb">— №4 —</div>
+                  <div class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
+                </div>
+              </li>
+              <li class="advantages-item color-block">
+                <div class="container-advantages container-advantages-numb">
+                  <div class="advantages-item-title">Мало<br>туристов</div>
+                  <div class="advantages-numb">— №5 —</div>
+                  <div class="advantages-description">Большинство едет в Гранд<br>Каньон и толпится там
+                  </div>
                 </div>
               </li>
             </ul>
@@ -131,7 +147,8 @@
           <section class="search">
             <h2 class="visually-hidden">Поиск гостиницы</h2>
             <strong class="interest">Заинтересовались?</strong>
-            <p class="best">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне
+            <p class="best">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в
+              Седоне
             </p>
             <a class="button button-search" href="#"><b>Поиск гостиницы в Седоне</b></a>
           </section>
@@ -143,7 +160,7 @@
         <form class="appointment-form-email" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="appointment-email">E-mail</label>
           <input type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
-          <button class="button" type="submit">подписаться</button>
+          <button class="button button-appointment" type="submit">подписаться</button>
         </form>
       </section>
       <footer class="page-footer">
@@ -152,15 +169,27 @@
             <h2 class="visually-hidden">Социальные сети</h2>
             <ul class="footer-social-list">
               <li class="footer-social-item">
-                <a class="footer-social-link footer-social-vk" href="https://vk.com/htmlacademy"></a>
+                <a class="footer-social-link footer-social-vk" href="https://vk.com/htmlacademy">
+                  <svg width="25" height="14" viewBox="0 0 25 14" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M24.116.948c.166-.546 0-.948-.795-.948h-2.625c-.668 0-.976.347-1.143.73 0 0-1.335 3.196-3.226 5.272-.612.602-.89.793-1.224.793-.167 0-.418-.191-.418-.738V.948c0-.656-.184-.948-.74-.948H9.817C9.4 0 9.15.304 9.15.593c0 .621.946.765 1.043 2.513v3.798c0 .833-.153.984-.487.984-.89 0-3.055-3.211-4.34-6.885C5.116.288 4.865 0 4.193 0H1.566c-.75 0-.9.347-.9.73 0 .682.89 4.07 4.145 8.551C6.981 12.341 10.036 14 12.82 14c1.67 0 1.875-.368 1.875-1.003v-2.313c0-.737.158-.884.687-.884.39 0 1.057.192 2.615 1.667C19.776 13.216 20.07 14 21.071 14h2.625c.75 0 1.126-.368.91-1.096-.238-.724-1.088-1.775-2.215-3.022-.612-.71-1.53-1.475-1.809-1.858-.389-.491-.278-.71 0-1.147 0 0 3.2-4.426 3.533-5.929h.001Z"/>
+                  </svg>
+                </a>
                 <span class="visually-hidden">Vkontakte</span>
               </li>
               <li class="footer-social-item">
-                <a class="footer-social-link footer-social-tg" href="https://t.me/htmlacademy"></a>
+                <a class="footer-social-link footer-social-tg" href="https://t.me/htmlacademy">
+                  <svg width="18" height="16" viewBox="0 0 18 16" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16.785.1.84 6.247C-.248 6.685-.24 7.292.64 7.563L4.735 8.84l9.472-5.976c.448-.273.857-.126.52.172L7.053 9.962H7.05h.002l-.283 4.22c.414 0 .597-.19.829-.413l1.988-1.934 4.136 3.055c.762.42 1.31.204 1.5-.706L17.938 1.39c.278-1.114-.425-1.619-1.153-1.29Z"/>
+                  </svg>
+                </a>
                 <span class="visually-hidden">Telegram</span>
               </li>
               <li class="footer-social-item">
-                <a class="footer-social-link footer-social-yt" href="https://www.youtube.com/user/htmlacademyru"></a>
+                <a class="footer-social-link footer-social-yt" href="https://www.youtube.com/user/htmlacademyru">
+                  <svg width="23" height="18" viewBox="0 0 23 18" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M18.94.5H3.507C1.647.5.333 2.094.333 3.9v10.094c0 1.912 1.314 3.506 3.174 3.506H19.16c1.642 0 3.174-1.594 3.174-3.4V3.9C22.114 2.094 20.801.5 18.94.5ZM7.995 13.037V4.963L15.328 9l-7.333 4.037Z"/>
+                  </svg>
+                </a>
                 <span class="visually-hidden">Youtube</span>
               </li>
             </ul>
@@ -172,8 +201,11 @@
           <section class="logo-html">
             <h2 class="visually-hidden">Логотип</h2>
             <a class="logo-html-link" href="https://htmlacademy.ru">
-              <img class="footer-logo" src="images/logo-html-academy.svg" width="115" height="33" alt="Логотип html-academy">
+              <svg width="115" height="33" viewBox="0 0 115 33" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 12.9v2.6h2.5v-2.6H0ZM11.6 4.5c-1.6 0-2.8.7-3.6 1.7h-.1V0h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.4c.1-3-1.8-4.9-4.5-4.9ZM26.6 4.8h-4.8V1.1h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V6.8h4.8v-2ZM41.1 4.6c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1V4.8H29v10.6h2V10c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2V9.8c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V8.9c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 12.7c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V0h-2v12.7ZM28.9 19.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22c-.5-2.4-2.6-4.1-5.4-4.1-3.4 0-5.6 2.5-5.6 5.6 0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1c-.4 1.3-1.7 2.3-3.3 2.3-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1V22ZM55.1 19.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 19.8c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 17.9c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 17.9c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"/>
+              </svg>
             </a>
+            <span class="visually-hidden">Логотип html-academy</span>
           </section>
         </div>
       </footer>
