--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <p class="appointment-paragraph">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="appointment-form-email" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="appointment-email">E-mail</label>
-          <input type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
+          <input class="field" type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
           <button class="button button-appointment" type="submit">подписаться</button>
         </form>
       </section>
