--- a/catalog.html
+++ b/catalog.html
@@ -127,10 +127,14 @@
               </fieldset>
               <fieldset class="catalog-filter-price">
                 <legend class="catalog-filter-title">Стоимость, ₽:</legend>
-                <p>
-                  <label>от<input type="text" value="0"></label>
-                  <label>до<input type="text" value="9000"></label>
-                </p>
+                <div class="range-wrapper-inputs">
+                  <label class="catalog-filter-label">
+                    от<input class="range-input" type="number" value="0" name="min-price">
+                  </label>
+                  <label class="catalog-filter-label">
+                    до<input class="range-input" type="number" value="9000" name="max-price">
+                  </label>
+                </div>
                 <div class="catalog-filter-row" min="0" max="9000"></div>
               </fieldset>
               <div class="button-catalog">
