--- a/catalog.html
+++ b/catalog.html
@@ -135,7 +135,17 @@
                     до<input class="range-input" type="number" value="9000" name="max-price">
                   </label>
                 </div>
-                <div class="catalog-filter-row" min="0" max="9000"></div>
+                <div class="range">
+                  <div class="range-scale">
+                    <div class="range-bar" style="left: 42px; width: 136px">
+                      <button class="range-toggle toggle-min">
+                        <span class="visually-hidden">Изменить минимальную цену.</span>
+                      </button>
+                      <button class="range-toggle toggle-max">
+                        <span class="visually-hidden">Изменить максимальную цену.</span>
+                      </button>
+                    </div>
+                  </div>
               </fieldset>
               <div class="button-catalog">
                 <button class="button" type="button">Применить</button>
