--- a/catalog.html
+++ b/catalog.html
@@ -128,16 +128,18 @@
               <fieldset class="catalog-filter-price">
                 <legend class="catalog-filter-title">Стоимость, ₽:</legend>
                 <div class="range-wrapper-inputs">
-                  <label class="catalog-filter-label">
-                    от<input class="range-input" type="number" value="0" name="min-price">
-                  </label>
-                  <label class="catalog-filter-label">
-                    до<input class="range-input" type="number" value="9000" name="max-price">
-                  </label>
+                  <div class="catalog-filter-input">
+                    <label class="catalog-filter-label">от</label>
+                    <input class="range-input range-input-min" type="text" value="0" name="min-price">
+                  </div>
+                  <div class="catalog-filter-input">
+                    <label class="catalog-filter-label">до</label>
+                    <input class="range-input range-input-max" type="text" value="9000" name="max-price">
+                  </div>
                 </div>
                 <div class="range">
                   <div class="range-scale">
-                    <div class="range-bar" style="left: 42px; width: 136px">
+                    <div class="range-bar" style="left: 0; width: 136px">
                       <button class="range-toggle toggle-min">
                         <span class="visually-hidden">Изменить минимальную цену.</span>
                       </button>
@@ -146,6 +148,7 @@
                       </button>
                     </div>
                   </div>
+                </div>
               </fieldset>
               <div class="button-catalog">
                 <button class="button" type="button">Применить</button>
