--- a/catalog.html
+++ b/catalog.html
@@ -284,12 +284,14 @@
               </li>
             </ul>
             <div class="filter-pagination">
-              <p class="filter-pagination-title">Гостиниц на странице:</p>
-              <select class="pagination-select-control" aria-label="Гостиниц на странице:">
-                <option value="cheap">4</option>
-              </select>
-            </div>
+              <span class="filter-pagination-title">Гостиниц на странице:</span>
+              <div class="pagination-select">
+                <select class="pagination-select-control" aria-label="Гостиниц на странице:">
+                  <option value="cheap">4</option>
+                </select>
+              </div>
           </div>
+        </div>
         </div>
       </main>
       <section class="appointment-catalog">
